[package]
name = "serde_cst"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_with = { version = "3.9.0", default-features = false, features = ["macros"] }

[features]
default = []
alloc = ["serde/alloc", "chrono/alloc", "serde_with/alloc"]
std = []
